Changing the color of the site title to match the text under it.  Now that it's not on a white background, it's unreadable.  This will be fixed once we have backing graphics.

--- a/theme/nova/style.css
+++ b/theme/nova/style.css
@@ -585,7 +585,7 @@ a:hover {
 	padding: 3.65625em 0 0;
 }
 #site-title a {
-	color: #111;
+	color: #7A7A7A;
 	font-size: 30px;
 	font-weight: bold;
 	line-height: 36px;
